--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -31,10 +31,10 @@
                                 This field is required<span class="required-asterisk">*</span>
                             </label>
                         </form>
-                        
+
                     </div>
                 </div>
-                
+
                 <div class="line"></div>
 
 
@@ -75,44 +75,55 @@
                                 </button>
                             </div>
                         </div>
+                        <!-- Assigned-to-Dropdown -->
                         <div class="kanban-assigned-to">
                             <span class="assigned-span">Assigned to</span>
                             <div class="all-user-container">
-                                 <mat-select panelClass="select-to-assign"  required name="name" id="" multiple>
-                            @for (user of overlayState.contactList; track $index) {
-                                <mat-option id={{$index}} value="$index + 1">
-                                    {{user.initials}} {{user.firstName}} {{user.lastName}}
-                                </mat-option>
-                            }
-                        </mat-select>
+                                <mat-select panelClass="select-to-assign" required name="name" id="" multiple>
+                                    @for (user of overlayState.contactList; track $index) {
+                                    <mat-option id={{$index}} value="$index + 1">
+                                        {{user.initials}} {{user.firstName}} {{user.lastName}}
+                                    </mat-option>
+                                    }
+                                </mat-select>
                             </div>
-                                <div class="list-of-members">
-                                    <div class="kanban-overlay-subtask">
-                                        <span class="subtask-span">Subtask</span>
-                                        <div class="subtaskfield">
-                                            Add new subtask
-                                            <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="Add new" />
-                                             
-                                        </div>
-                                         
-                                        <div class="each-sub-task">
-                                            <button class="clear" (click)="clearSubtask()">
-                                                Clear
-                                                <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path
-                                                        d="M16 17.4L11.1 22.3C10.9167 22.4834 10.6834 22.575 10.4 22.575C10.1167 22.575 9.88338 22.4834 9.70005 22.3C9.51672 22.1167 9.42505 21.8834 9.42505 21.6C9.42505 21.3167 9.51672 21.0834 9.70005 20.9L14.6 16L9.70005 11.1C9.51672 10.9167 9.42505 10.6834 9.42505 10.4C9.42505 10.1167 9.51672 9.88338 9.70005 9.70005C9.88338 9.51672 10.1167 9.42505 10.4 9.42505C10.6834 9.42505 10.9167 9.51672 11.1 9.70005L16 14.6L20.9 9.70005C21.0834 9.51672 21.3167 9.42505 21.6 9.42505C21.8834 9.42505 22.1167 9.51672 22.3 9.70005C22.4834 9.88338 22.575 10.1167 22.575 10.4C22.575 10.6834 22.4834 10.9167 22.3 11.1L17.4 16L22.3 20.9C22.4834 21.0834 22.575 21.3167 22.575 21.6C22.575 21.8834 22.4834 22.1167 22.3 22.3C22.1167 22.4834 21.8834 22.575 21.6 22.575C21.3167 22.575 21.0834 22.4834 20.9 22.3L16 17.4Z"
-                                                        fill="currentColor" />
-                                                </svg>
-                                            </button>
-                                            <button class="create-task" (click)="debug()">
-                                                Create Task
-                                                <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
-                                            </button>
-                                        </div>
+                            <!-- Category-Dropdown -->
+                            <div class="category-dropdown">
+                                <span class="category-span">Category</span>
+                                <select panelClass="select-category" name="category">
+                                    <option value="Technical Task">Technical Task</option>
+                                    <option value="User Story">User Story</option>
+                                </select>
+                            </div>
+
+                            <!-- Subtask Section -->
+                            <div class="list-of-members">
+                                <div class="kanban-overlay-subtask">
+                                    <span class="subtask-span">Subtask</span>
+                                    <div class="subtaskfield">
+                                        Add new subtask
+                                        <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="Add new" />
+
+                                    </div>
+
+                                    <div class="each-sub-task">
+                                        <button class="clear" (click)="clearSubtask()">
+                                            Clear
+                                            <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M16 17.4L11.1 22.3C10.9167 22.4834 10.6834 22.575 10.4 22.575C10.1167 22.575 9.88338 22.4834 9.70005 22.3C9.51672 22.1167 9.42505 21.8834 9.42505 21.6C9.42505 21.3167 9.51672 21.0834 9.70005 20.9L14.6 16L9.70005 11.1C9.51672 10.9167 9.42505 10.6834 9.42505 10.4C9.42505 10.1167 9.51672 9.88338 9.70005 9.70005C9.88338 9.51672 10.1167 9.42505 10.4 9.42505C10.6834 9.42505 10.9167 9.51672 11.1 9.70005L16 14.6L20.9 9.70005C21.0834 9.51672 21.3167 9.42505 21.6 9.42505C21.8834 9.42505 22.1167 9.51672 22.3 9.70005C22.4834 9.88338 22.575 10.1167 22.575 10.4C22.575 10.6834 22.4834 10.9167 22.3 11.1L17.4 16L22.3 20.9C22.4834 21.0834 22.575 21.3167 22.575 21.6C22.575 21.8834 22.4834 22.1167 22.3 22.3C22.1167 22.4834 21.8834 22.575 21.6 22.575C21.3167 22.575 21.0834 22.4834 20.9 22.3L16 17.4Z"
+                                                    fill="currentColor" />
+                                            </svg>
+                                        </button>
+                                        <button class="create-task" (click)="debug()">
+                                            Create Task
+                                            <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
+                                        </button>
                                     </div>
                                 </div>
-                            
+                            </div>
+
                         </div>
                     </div>
                 </div>
