--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -219,10 +219,13 @@ section {
             display: flex;
             flex-direction: column;
 
-            .category-span {
-                font-size: 16px;
-                color: #42526e;
-                display: block;
+            .form-label {
+                font-size: 1.6em;
+
+                .required-asterisk {
+                    color: red;
+                    margin-right: 1em;
+                }
             }
 
             select {
