Refactor assigned user selection in Kanban edit
Updated the assignment logic to bind selected users directly to `task.assignedTo` using ngModel, and adjusted the mat-option value to use the user object. Simplified the task update logic to use `task.assignedTo` instead of mapping from `selectedUser`.

--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -61,9 +61,9 @@
                 <div class="kanban-assigned-to">
                     <span class="assigned-span">Assigned to</span>
                     <div class="all-user-container">
-                        <mat-select [(value)]="selectedUser"  panelClass="select-to-assign"  required name="name" id="" multiple>
+                        <mat-select [(ngModel)]="task.assignedTo" panelClass="select-to-assign"  required name="name" id="" multiple>
                             @for (user of overlayState.contactList; track $index) {
-                                <mat-option id={{$index}} value="$index + 1">
+                                <mat-option id={{$index}} [value]="user">
                                     {{user.initials}} {{user.firstName}} {{user.lastName}}
                                 </mat-option>
                             } 
