--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -105,15 +105,20 @@ section {
 	background-color: rgb(208, 127, 255);
 }
 
-.entwicklung {
+.technicaltask {
+	background-color: rgb(208, 127, 255);
+}
+
+.developement {
 	background-color: rgb(127, 204, 255);
 }
+
 
 .design {
 	background-color: rgb(127, 255, 212);
 }
 
-.devops {
+.userstory {
 	background-color: rgb(255, 210, 127);
 }
 
