--- a/src/app/kanban/kanban-board/card/card.component.scss
+++ b/src/app/kanban/kanban-board/card/card.component.scss
@@ -105,7 +105,7 @@ section {
 	background-color: rgb(208, 127, 255);
 }
 
-.technicaltask {
+.technical {
 	background-color: rgb(208, 127, 255);
 }
 
@@ -118,11 +118,11 @@ section {
 	background-color: rgb(127, 255, 212);
 }
 
-.userstory {
+.user-story {
 	background-color: rgb(255, 210, 127);
 }
 
-.dokumentation {
+.documentation {
 	background-color: rgb(255, 127, 127);
 }
 
