--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -127,23 +127,28 @@ section {
 }
 
 .management {
-  background-color: rgb(208, 127, 255);
+	background-color: rgb(208, 127, 255);
 }
 
-.entwicklung {
-  background-color: rgb(127, 204, 255);
+.technical {
+	background-color: rgb(208, 127, 255);
 }
+
+.developement {
+	background-color: rgb(127, 204, 255);
+}
+
 
 .design {
-  background-color: rgb(127, 255, 212);
+	background-color: rgb(127, 255, 212);
 }
 
-.devops {
-  background-color: rgb(255, 210, 127);
+.user-story {
+	background-color: rgb(255, 210, 127);
 }
 
-.dokumentation {
-  background-color: rgb(255, 127, 127);
+.documentation {
+	background-color: rgb(255, 127, 127);
 }
 
 .initials {
