Improve Kanban board user and edit overlay handling
Displays assigned user initials with background color on cards, adjusts z-index for edit overlay, and ensures overlay closes on edit confirmation. Minor style tweaks and input property added for task data in KanbanBoardComponent.

--- a/src/app/kanban/kanban-board/card/card.component.html
+++ b/src/app/kanban/kanban-board/card/card.component.html
@@ -19,9 +19,12 @@
     
     <div class="user-content">
       <div class="user-area">
-<!--         @for (user of task.assignedTo; track $index) {
-        <div class="user initials">{{ user.user.slice(0, 2).toLocaleUpperCase()}}</div>
-        } -->
+        @for (user of task.assignedTo; track $index) {
+        <div class="user-details">
+          <div class="user initials" [style.background]= user.color>{{ user.initials}} </div>
+        </div>
+
+        }
       </div>
 
       <div class="user-priority">
