--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -111,7 +111,7 @@
             </div>
             
             <div class="confirm-edit-button">
-                <button (click)="confirmChanges()">
+                <button (click)="confirmChanges(); boardService.toggleEditOverlay()">
                     <span>Ok</span>
                     <img src="assets/img/add-contacts/check.svg" alt="" />
                 </button>
