--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -61,8 +61,8 @@
                 flex-direction: column;
                 align-items: center;
                 overflow-y: auto;
-                max-height: 65em;
-
+/*                 max-height: 65em;
+ */
                 .kanban-overlay-form {
                     display: flex;
                     flex-direction: column;
