--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -87,8 +87,9 @@ section {
   }
 
   .description {
-    white-space: nowrap;
-    overflow: hidden;
+/*     white-space: nowrap;
+ */    
+  overflow: hidden;
     text-overflow: ellipsis;
   }
 
