--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,14 @@ html {
         }
 
     }
+
+    .mat-mdc-select-arrow svg {
+        fill: rgba($color: #000000, $alpha: 0.3);
+        position: absolute;
+        top: 50%;
+        left: -100%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 * {
