--- a/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
+++ b/src/app/kanban-add-overlay/kanban-add-overlay.component.scss
@@ -1,18 +1,18 @@
-.main-content {
-    display: flex;
-    height: 100dvh;
-    overflow-x: hidden;
+// .main-content {
+//     display: flex;
+//     height: 100dvh;
+//     overflow-x: hidden;
 
-    @media (max-width: 965px) {
-        height: 92dvh;
-    }
-}
+//     @media (max-width: 965px) {
+//         height: 92dvh;
+//     }
+// }
 
-.main-content-input {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
+// .main-content-input {
+//     display: flex;
+//     flex-direction: column;
+//     width: 100%;
+// }
 
 section {
     font-size: 10px;
@@ -23,6 +23,28 @@ section {
     width: 100%;
     height: 92dvh;
 
+    .close-button {
+        font-weight: 600;
+        gap: 1em;
+        cursor: pointer;
+        border: none;
+        border-radius: 30px;
+        font-size: 21px;
+        color: rgb(95, 95, 95);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 32px;
+        height: 32px;
+        background: url("../../../../../public/assets/img/kanban-board/fullCardCloseButton.png");
+        background-repeat: none;
+        background-position: center;
+        transition: ease-in-out 0.15s;
+
+        &:hover {
+            background-color: rgb(230, 230, 230);
+        }
+    }
     // ----------- Left Side ----------
     .left-addtask {
         width: 49%;
