--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -61,7 +61,8 @@
                 flex-direction: column;
                 align-items: center;
                 overflow-y: auto;
-/*                 max-height: 65em;
+
+                /*                 max-height: 65em;
  */
                 .kanban-overlay-form {
                     display: flex;
@@ -170,6 +171,8 @@
                             font-size: 16px;
                             overflow-x: hidden;
                             color: white;
+
+
 
                             &:hover {
                                 border: 2px rgba(0, 0, 0, 0.694) solid;
@@ -331,7 +334,24 @@
     flex-direction: row-reverse;
     background: white;
 
+    .select-initials {
+        width: 2em;
+        height: 2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1em;
+        margin-right: 1em;
+    }
+
     &:hover {
         background: #eeeeee;
     }
+}
+
+.option-text {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
 }
