anpassungen von edit-contact auf add contact übertragen
background initials and styling of assignTo box

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -82,7 +82,7 @@
                                 <mat-select panelClass="select-to-assign" required name="name" id="" multiple>
                                     @for (user of overlayState.contactList; track $index) {
                                     <mat-option id={{$index}} value="$index + 1">
-                                        {{user.initials}} {{user.firstName}} {{user.lastName}}
+                                        <div class="option-text"><div class="select-initials" [style.background]="user.color">{{user.initials}}</div> <div>{{user.firstName}} {{user.lastName}}</div></div>
                                     </mat-option>
                                     }
                                 </mat-select>
