--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -106,10 +106,12 @@ section {
                 background-color: #ff3d00;
                 color: white;
             }
+
             .active-medium {
                 background-color: #ffa800;
                 color: white;
             }
+
             .active-low {
                 background-color: #7ae229;
                 color: white;
@@ -171,76 +173,120 @@ section {
             font-size: 1.6em;
             padding-left: 2.7em;
             padding-bottom: 0.4em;
-        .kanban-addtask-priority {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
 
-            p {
-                font-size: 1.6em;
-            }
-
-            .priority-buttons {
+            .kanban-addtask-priority {
+                width: 100%;
                 display: flex;
-                justify-content: space-between;
-                margin-bottom: 4em;
+                flex-direction: column;
 
-                .active-urgent {
-                    background-color: #ff3d00;
-                    color: white;
-                }
-                .active-medium {
-                    background-color: #ffa800;
-                    color: white;
-                }
-                .active-low {
-                    background-color: #7ae229;
-                    color: white;
+                p {
+                    font-size: 1.6em;
                 }
 
-                button {
+                .priority-buttons {
                     display: flex;
-                    gap: 0.4em;
-                    background-color: white;
-                    border: solid rgba(0, 0, 0, 0.049) 2px;
-                    border-radius: 10px;
-                    font-size: 20px;
-                    padding: 10px 16px;
-                    transition: box-shadow 0.3s ease;
+                    justify-content: space-between;
+                    margin-bottom: 4em;
 
-                    img {
-                        width: 20px;
+                    .active-urgent {
+                        background-color: #ff3d00;
+                        color: white;
                     }
 
-                    &:hover {
-                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                    .active-medium {
+                        background-color: #ffa800;
+                        color: white;
+                    }
+
+                    .active-low {
+                        background-color: #7ae229;
+                        color: white;
+                    }
+
+                    button {
+                        display: flex;
+                        gap: 0.4em;
+                        background-color: white;
+                        border: solid rgba(0, 0, 0, 0.049) 2px;
+                        border-radius: 10px;
+                        font-size: 20px;
+                        padding: 10px 16px;
+                        transition: box-shadow 0.3s ease;
+
+                        img {
+                            width: 20px;
+                        }
+
+                        &:hover {
+                            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                        }
                     }
                 }
-            }
-        }
-
-        .all-user-container {
-            width: 100%;
-            padding-left: 4em;
-            padding-right: 12em;
-
-            .assigned-span {
-                font-size: 1.6em;
             }
 
             .all-user-container {
                 width: 100%;
+                padding-left: 4em;
+                padding-right: 12em;
 
-                mat-select {
-                    display: flex;
-                    align-items: center;
+                .assigned-span {
+                    font-size: 1.6em;
+                }
+
+                .all-user-container {
+                    width: 100%;
+
+                    mat-select {
+                        display: flex;
+                        align-items: center;
+                        border: 2px rgba(0, 0, 0, 0.346) solid;
+                        width: 100%;
+                        border-radius: 10px;
+                        height: 48px;
+                        font-size: 16px;
+                        overflow-x: hidden;
+                        color: white;
+
+                        &:hover {
+                            border: 2px rgba(0, 0, 0, 0.694) solid;
+                        }
+
+                        &:focus {
+                            border: 1px #29abe2 solid;
+                        }
+                    }
+                }
+            }
+
+            .category-dropdown {
+                margin-top: 20px;
+                display: flex;
+                flex-direction: column;
+
+                .form-label {
+                    font-size: 1.6em;
+
+                    .required-asterisk {
+                        color: red;
+                        margin-right: 1em;
+                    }
+                }
+
+                select {
                     border: 2px rgba(0, 0, 0, 0.346) solid;
                     width: 100%;
                     border-radius: 10px;
                     height: 48px;
                     font-size: 16px;
                     overflow-x: hidden;
-                    color: white;
+                    color: rgb(0, 0, 0);
+
+                    .select-category {
+                        width: 100%;
+                        background: white;
+                        border-radius: 10px;
+                        padding: 12px;
+                    }
 
                     &:hover {
                         border: 2px rgba(0, 0, 0, 0.694) solid;
@@ -251,44 +297,30 @@ section {
                     }
                 }
             }
-        }
 
-        .category-dropdown {
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-
-            .form-label {
-                font-size: 1.6em;
-
-                .required-asterisk {
-                    color: red;
-                    margin-right: 1em;
-                }
-            }
-
-            select {
-                border: 2px rgba(0, 0, 0, 0.346) solid;
+            .kanban-overlay-subtask {
                 width: 100%;
-                border-radius: 10px;
-                height: 48px;
-                font-size: 16px;
-                overflow-x: hidden;
-                color: rgb(0, 0, 0);
+                padding-top: 3em;
 
-                .select-category {
-                    width: 100%;
-                    background: white;
+                .subtask-span {
+                    font-size: 16px;
+                    padding-bottom: 0.4em;
+                }
+
+                .subtaskfield {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    background-color: white;
+                    border: 2px rgba(0, 0, 0, 0.346) solid;
+                    padding: 1em;
                     border-radius: 10px;
-                    padding: 12px;
-                }
+                    height: 48px;
+                    font-size: 16px;
 
-                &:hover {
-                    border: 2px rgba(0, 0, 0, 0.694) solid;
-                }
-
-                &:focus {
-                    border: 1px #29abe2 solid;
+                    &:hover {
+                        border: 2px rgba(0, 0, 0, 0.694) solid;
+                    }
                 }
             }
         }
@@ -307,164 +339,139 @@ section {
                 align-items: center;
                 justify-content: space-between;
                 background-color: white;
-                border: 2px rgba(0, 0, 0, 0.346) solid;
                 padding: 1em;
-                border-radius: 10px;
-                height: 48px;
                 font-size: 16px;
+                height: 48px;
+                border: 2px solid rgba(0, 0, 0, 0.151);
+                border-radius: 10px;
+            }
+        }
+
+        .each-sub-task {
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 10em;
+            gap: 1.5em;
+
+            .clear {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: transparent;
+                border: solid rgba(0, 0, 0, 0.049) 2px;
+                border-radius: 10px;
+                font-size: 1.8em;
+                padding: 8px 10px;
+                transition: box-shadow 0.3s ease;
+
+                img {
+                    margin-left: 0.5em;
+                }
 
                 &:hover {
-                    border: 2px rgba(0, 0, 0, 0.694) solid;
+                    color: #29abe2;
+                    border: 2px #29abe2 solid;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+                }
+            }
+
+            .create-task {
+                color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: #2a3647;
+                border: solid rgba(0, 0, 0, 0.049) 2px;
+                border-radius: 10px;
+                font-size: 1.8em;
+                padding: 10px 18px;
+                transition: box-shadow 0.3s ease;
+
+                img {
+                    margin-left: 0.5em;
+                }
+
+                &:hover {
+                    background-color: #29abe2;
+                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
                 }
             }
         }
     }
 
-    .kanban-overlay-subtask {
-        width: 100%;
-        padding-top: 3em;
-
-        .subtask-span {
-            font-size: 16px;
-            padding-bottom: 0.4em;
-        }
-
-        .subtaskfield {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: white;
-            padding: 1em;
-            font-size: 16px;
-            height: 48px;
-            border: 2px solid rgba(0, 0, 0, 0.151);
-            border-radius: 10px;
-        }
-    }
-
-    .each-sub-task {
+    .contact-list-content {
         display: flex;
-        justify-content: flex-end;
-        margin-top: 10em;
-        gap: 1.5em;
-
-        .clear {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: transparent;
-            border: solid rgba(0, 0, 0, 0.049) 2px;
-            border-radius: 10px;
-            font-size: 1.8em;
-            padding: 8px 10px;
-            transition: box-shadow 0.3s ease;
-
-            img {
-                margin-left: 0.5em;
-            }
-
-            &:hover {
-                color: #29abe2;
-                border: 2px #29abe2 solid;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            }
-        }
-
-        .create-task {
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #2a3647;
-            border: solid rgba(0, 0, 0, 0.049) 2px;
-            border-radius: 10px;
-            font-size: 1.8em;
-            padding: 10px 18px;
-            transition: box-shadow 0.3s ease;
-
-            img {
-                margin-left: 0.5em;
-            }
-
-            &:hover {
-                background-color: #29abe2;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            }
-        }
-    }
-}
-
-.contact-list-content {
-    display: flex;
-    height: 90%;
-}
-
-.contact-list-component {
-    display: flex;
-    height: auto;
-
-    @media (max-width: 750px) {
-        width: 100%;
+        height: 90%;
     }
 
-    @media (min-width: 750px) {
+    .contact-list-component {
         display: flex;
+        height: auto;
+
+        @media (max-width: 750px) {
+            width: 100%;
+        }
+
+        @media (min-width: 750px) {
+            display: flex;
+        }
     }
-}
 
-.hidden {
-    display: none;
-}
-
-.info-screen-component {
-    height: auto;
-    width: 100%;
-
-    @media (max-width: 750px) {
+    .hidden {
         display: none;
     }
-}
 
-.app-info-screen-mobile-component {
-    width: 100%;
+    .info-screen-component {
+        height: auto;
+        width: 100%;
 
-    @media (min-width: 750px) {
-        display: none;
+        @media (max-width: 750px) {
+            display: none;
+        }
     }
-}
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
+    .app-info-screen-mobile-component {
+        width: 100%;
 
-input[type="number"] {
-    appearance: textfield;
-}
+        @media (min-width: 750px) {
+            display: none;
+        }
+    }
 
-.createdContact {
-    z-index: 4;
-    width: 15em;
-    height: 4em;
-    position: fixed;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-    border-radius: 14px;
-    border: 1px solid black;
-    background-color: #2a3647;
-    color: white;
-    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
-    animation: fade-in-left-overlay-viewport 2s ease-in-out;
-}
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 
-.display {
-    display: flex;
+    input[type="number"] {
+        appearance: textfield;
+    }
+
+    .createdContact {
+        z-index: 4;
+        width: 15em;
+        height: 4em;
+        position: fixed;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        border-radius: 14px;
+        border: 1px solid black;
+        background-color: #2a3647;
+        color: white;
+        box-shadow: 0 4px 0 rgba(0, 0, 0, 0.15);
+        animation: fade-in-left-overlay-viewport 2s ease-in-out;
+    }
+
+    .display {
+        display: flex;
+    }
+
 }
 
 .mat-mdc-option:focus.mdc-list-item,
@@ -473,6 +480,7 @@ input[type="number"] {
     flex-direction: row-reverse;
     background-color: #2a3647;
     color: white;
+
 
     &:hover {
         background-color: #091931;
@@ -484,8 +492,24 @@ input[type="number"] {
     flex-direction: row-reverse;
     background: white;
 
+    .select-initials {
+        width: 2em;
+        height: 2em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 1em;
+        margin-right: 1em;
+    }
+
     &:hover {
         background: #eeeeee;
     }
 }
+
+.option-text {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
 }
