Set button text color to white in kanban add/edit
Added 'color: white;' to button styles in both kanban-add and kanban-edit components to ensure button text is visible and consistent with the design.

--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -500,6 +500,7 @@ section {
         justify-content: center;
         border-radius: 1em;
         margin-right: 1em;
+        color: white;
     }
 
     &:hover {
