--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -342,6 +342,7 @@
         justify-content: center;
         border-radius: 1em;
         margin-right: 1em;
+        color: white;
     }
 
     &:hover {
