Revamp Kanban add task UI and category options
Refactored SCSS for improved layout and structure in kanban-add component, introducing left/right content wrappers and better form styling. Updated category dropdown options in HTML to include more categories. Added specific styling for subtask input fields for consistency.

--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -91,8 +91,12 @@
                             <div class="category-dropdown">
                                 <label class="form-label">Category<span class="required-asterisk">*</span></label>
                                 <select panelClass="select-category" name="category">
-                                    <option value="Technical Task">Technical Task</option>
-                                    <option value="User Story">User Story</option>
+                                    <option value="Management">Management</option>
+									<option value="Technical">Technical</option>
+									<option value="Developement">Developement</option>
+									<option value="Design">Design</option>
+									<option value="Documentation">Documentation</option>
+									<option value="User Story">User Story</option>
                                 </select>
                             </div>
 
@@ -102,7 +106,7 @@
                                     <span class="subtask-span">Subtask</span>
                                     <div class="subtaskfield">
                                         @for (subtaskInput of taskList.subTaskFillTest; track $index) {
-											<input [(ngModel)]="subtaskInput.text" type="text" placeholder="Add new subtask">
+											<input [(ngModel)]="subtaskInput.text" type="text" class="input-subtask" placeholder="Add new subtask">
                                         }
                                     </div>
 
