--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -23,116 +23,74 @@ section {
     width: 100%;
     height: 92dvh;
 
-    .kanban-form {
+
+    // ----------- Left Side ----------
+    .left-addtask {
+        width: 49%;
         display: flex;
         flex-direction: column;
-        width: 50%;
-        gap: 30px;
-        padding-left: 8em;
-        padding-right: 5em;
+        justify-content: center;
+        align-items: center;
 
-        h1 {
-            padding-top: 1.5em;
-            font-size: 6em;
-        }
-
-        label {
-            font-size: 1.6em;
-            margin-bottom: 0.3em;
-
-            .required-asterisk {
-                color: red;
-                margin-right: 1em;
-            }
-        }
-
-        .div-cont {
+        .left-content-wrapper {
             display: flex;
             flex-direction: column;
-            min-height: 64px;
+            gap: 4em;
+            width: 80%;
 
-            input,
-            textarea {
-                min-height: 48px;
-                border-radius: 15px;
-                padding: 0.5em;
-                font-size: 16px;
-                resize: none;
-                border: 2px solid rgba(0, 0, 0, 0.214);
-
-                &:focus {
-                    border: 2px solid #29abe2;
-                }
-            }
-
-            textarea {
-                height: 84px;
-            }
-
-            span {
-                color: rgba(0, 0, 0, 0.746);
-                font-size: 18px;
-                margin-bottom: 0.3em;
-            }
-        }
-
-        .form-label {
-            position: absolute;
-            bottom: 3.5em;
-            font-size: 1.6em;
-            margin-right: 1.5em;
-        }
-    }
-
-    .kanban-addtask-priority {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-
-        p {
-            font-size: 18px;
-            padding-left: 2em;
-            padding-top: 10.5em;
-            margin-bottom: 0.4em;
-        }
-
-        .priority-buttons {
-            display: flex;
-            justify-content: space-evenly;
-            margin-bottom: 4em;
-            padding-right: 8em;
-
-            .active-urgent {
-                background-color: #ff3d00;
-                color: white;
-            }
-
-            .active-medium {
-                background-color: #ffa800;
-                color: white;
-            }
-
-            .active-low {
-                background-color: #7ae229;
-                color: white;
-            }
-
-            button {
+            .kanban-form {
                 display: flex;
-                gap: 5px;
-                background-color: white;
-                border: solid rgba(0, 0, 0, 0.049) 2px;
-                border-radius: 10px;
-                font-size: 20px;
-                padding: 10px 16px;
-                transition: box-shadow 0.3s ease;
+                flex-direction: column;
+                width: 100%;
+                gap: 30px;
+                bottom: 2.5em;
 
-                img {
-                    width: 20px;
+                h1 {
+                    bottom: 1.5em;
+                    font-size: 6em;
                 }
 
-                &:hover {
-                    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                .form-label {
+                    font-size: 1.6em;
+
+                    .required-asterisk {
+                        color: red;
+                        margin-right: 1em;
+                    }
+                }
+
+                .required-label {
+                    font-size: 1.6em;
+                    top: 10em;
+                }
+
+                .div-cont {
+                    display: flex;
+                    flex-direction: column;
+                    min-height: 64px;
+
+                    input,
+                    textarea {
+                        min-height: 48px;
+                        border-radius: 15px;
+                        padding: 0.5em;
+                        font-size: 16px;
+                        resize: none;
+                        border: 2px solid rgba(0, 0, 0, 0.049);
+
+                        &:focus {
+                            border: 2px solid #29abe2;
+                        }
+                    }
+
+                    textarea {
+                        height: 84px;
+                    }
+
+                    span {
+                        color: rgba(0, 0, 0, 0.746);
+                        font-size: 18px;
+                    }
                 }
             }
         }
@@ -163,130 +121,88 @@ section {
 
 // ----------- Right Side ----------
 .right-addtask {
-    width: 50%;
+    width: 49%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    .kanban-assigned-to {
+    .right-content-wrapper {
         display: flex;
         flex-direction: column;
+        width: 80%;
+        top: 8em;
 
-        .assigned-span {
-            font-size: 1.6em;
-            padding-left: 2.7em;
-            padding-bottom: 0.4em;
+        .kanban-addtask-priority {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
 
-            .kanban-addtask-priority {
-                width: 100%;
+            p {
+                font-size: 1.6em;
+            }
+
+            .priority-buttons {
                 display: flex;
-                flex-direction: column;
+                justify-content: space-between;
+                margin-bottom: 4em;
 
-                p {
-                    font-size: 1.6em;
+                .active-urgent {
+                    background-color: #ff3d00;
+                    color: white;
+                }
+                .active-medium {
+                    background-color: #ffa800;
+                    color: white;
+                }
+                .active-low {
+                    background-color: #7ae229;
+                    color: white;
                 }
 
-                .priority-buttons {
+                button {
                     display: flex;
-                    justify-content: space-between;
-                    margin-bottom: 4em;
+                    gap: 0.4em;
+                    background-color: white;
+                    border: solid rgba(0, 0, 0, 0.049) 2px;
+                    border-radius: 10px;
+                    font-size: 20px;
+                    padding: 10px 16px;
+                    transition: box-shadow 0.3s ease;
 
-                    .active-urgent {
-                        background-color: #ff3d00;
-                        color: white;
+                    img {
+                        width: 20px;
                     }
 
-                    .active-medium {
-                        background-color: #ffa800;
-                        color: white;
-                    }
-
-                    .active-low {
-                        background-color: #7ae229;
-                        color: white;
-                    }
-
-                    button {
-                        display: flex;
-                        gap: 0.4em;
-                        background-color: white;
-                        border: solid rgba(0, 0, 0, 0.049) 2px;
-                        border-radius: 10px;
-                        font-size: 20px;
-                        padding: 10px 16px;
-                        transition: box-shadow 0.3s ease;
-
-                        img {
-                            width: 20px;
-                        }
-
-                        &:hover {
-                            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                        }
+                    &:hover {
+                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
                     }
                 }
+            }
+        }
+
+        .kanban-assigned-to {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+
+            .assigned-span {
+                font-size: 1.6em;
             }
 
             .all-user-container {
                 width: 100%;
-                padding-left: 4em;
-                padding-right: 12em;
 
-                .assigned-span {
-                    font-size: 1.6em;
-                }
-
-                .all-user-container {
-                    width: 100%;
-
-                    mat-select {
-                        display: flex;
-                        align-items: center;
-                        border: 2px rgba(0, 0, 0, 0.346) solid;
-                        width: 100%;
-                        border-radius: 10px;
-                        height: 48px;
-                        font-size: 16px;
-                        overflow-x: hidden;
-                        color: white;
-
-                        &:hover {
-                            border: 2px rgba(0, 0, 0, 0.694) solid;
-                        }
-
-                        &:focus {
-                            border: 1px #29abe2 solid;
-                        }
-                    }
-                }
-            }
-
-            .category-dropdown {
-                margin-top: 20px;
-                display: flex;
-                flex-direction: column;
-
-                .form-label {
-                    font-size: 1.6em;
-
-                    .required-asterisk {
-                        color: red;
-                        margin-right: 1em;
-                    }
-                }
-
-                select {
-                    border: 2px rgba(0, 0, 0, 0.346) solid;
+                mat-select {
+                    display: flex;
+                    align-items: center;
+                    border: 2px rgba(0, 0, 0, 0.049) solid;
                     width: 100%;
                     border-radius: 10px;
                     height: 48px;
                     font-size: 16px;
                     overflow-x: hidden;
-                    color: rgb(0, 0, 0);
-
-                    .select-category {
-                        width: 100%;
-                        background: white;
-                        border-radius: 10px;
-                        padding: 12px;
-                    }
+                    color: white;
 
                     &:hover {
                         border: 2px rgba(0, 0, 0, 0.694) solid;
@@ -297,30 +213,44 @@ section {
                     }
                 }
             }
+        }
 
-            .kanban-overlay-subtask {
+        .category-dropdown {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+
+            .form-label {
+                font-size: 1.6em;
+
+                .required-asterisk {
+                    color: red;
+                    margin-right: 1em;
+                }
+            }
+
+            select {
+                border: 2px rgba(0, 0, 0, 0.049) solid;
                 width: 100%;
-                padding-top: 3em;
+                border-radius: 10px;
+                height: 48px;
+                font-size: 16px;
+                overflow-x: hidden;
+                color: rgb(0, 0, 0);
 
-                .subtask-span {
-                    font-size: 16px;
-                    padding-bottom: 0.4em;
+                .select-category {
+                    width: 100%;
+                    background: white;
+                    border-radius: 10px;
+                    padding: 12px;
                 }
 
-                .subtaskfield {
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-                    background-color: white;
-                    border: 2px rgba(0, 0, 0, 0.346) solid;
-                    padding: 1em;
-                    border-radius: 10px;
-                    height: 48px;
-                    font-size: 16px;
+                &:hover {
+                    border: 2px rgba(0, 0, 0, 0.694) solid;
+                }
 
-                    &:hover {
-                        border: 2px rgba(0, 0, 0, 0.694) solid;
-                    }
+                &:focus {
+                    border: 1px #29abe2 solid;
                 }
             }
         }
@@ -338,12 +268,21 @@ section {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                background-color: white;
-                padding: 1em;
-                font-size: 16px;
-                height: 48px;
-                border: 2px solid rgba(0, 0, 0, 0.151);
-                border-radius: 10px;
+                // background-color: white;
+                // padding: 1em;
+                // font-size: 16px;
+                // height: 48px;
+                // border: 2px solid rgba(0, 0, 0, 0.049);
+                // border-radius: 10px;
+
+                .input-subtask {
+                    width: 100%;
+                    font-size: 16px;
+                    padding: 1em;
+                    height: 48px;
+                    border-radius: 10px;
+                    border: 2px solid rgba(0, 0, 0, 0.049);
+                }
             }
         }
 
@@ -398,7 +337,9 @@ section {
             }
         }
     }
+}
 
+// -------- Other Components ----------
     .contact-list-content {
         display: flex;
         height: 90%;
@@ -472,7 +413,7 @@ section {
         display: flex;
     }
 
-}
+
 
 .mat-mdc-option:focus.mdc-list-item,
 .mat-mdc-option.mat-mdc-option-active.mdc-list-item {
